--- a/index.html
+++ b/index.html
@@ -16,36 +16,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello!</title>
+    <link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+  crossorigin="anonymous"
+/>
+
+
+
+
   </head>
-  <body class="">
-    <div class="container py-4">
-      <div class="">
-        <div class="">
+  <body class="mt-0 p-0 box-sizing-border-box vw-100">
+    <div class="container py-4 border border-1 w-100 d-flex justify-content-center align-items-center">
+      <div class="row w-100">
+        <div class="card-body col-6 d-grid gap-2 d-flex justify-content-center align-items-center flex-column border border-1 rounded">
           <img
             src="https://thumbs.dreamstime.com/b/no-thumbnail-image-placeholder-forums-blogs-websites-148010362.jpg"
-            class=""
+            class="rounded-circle"
             style="width: 80px; height: 80px"
             alt="Avatar"
           />
           <h5 class=""><strong>John Doe</strong></h5>
-          <button type="button" class="">Contact</button>
+          <button type="button" class="btn btn-success">Contact</button>
         </div>
-        <div class="">
+        <div class="card-body col-6 p-3 gap-3 d-flex justify-content-center flex-column border border-1 rounded">
           <strong>My Progress</strong>
           <ul class="">
-            <li class="">
-              <div class="">
+            <li class="d-flex flex-row justify-content-between align-items-center">
+              <div class="d-flex justify-content-start gap-3">
                 <img
                   src="https://thumbs.dreamstime.com/b/no-thumbnail-image-placeholder-forums-blogs-websites-148010362.jpg"
                   alt=""
                   style="width: 45px; height: 45px"
-                  class=""
+                  class="rounded"
                 />
-                <div class="">
-                  <p class="">Django</p>
-                  <div class="">
+                <div class="d-flex flex-column">
+                  <p class="fw-bold">Django</p>
+                  <div class="progress">
                     <div
-                      class=""
+                      class="progress-bar bg-success"
                       role="progressbar"
                       style="width: 80%"
                       aria-valuenow="50"
@@ -55,23 +65,23 @@
                   </div>
                 </div>
               </div>
-              <span class="">&rarr;</span>
+              <span class="badge rounded-pill bg-success h-25">&rarr;</span>
             </li>
           </ul>
           <ul class="">
-            <li class="">
-              <div class="">
+            <li class="d-flex flex-row justify-content-between align-items-center">
+              <div class="d-flex justify-content-start gap-3">
                 <img
                   src="https://thumbs.dreamstime.com/b/no-thumbnail-image-placeholder-forums-blogs-websites-148010362.jpg"
                   alt=""
                   style="width: 45px; height: 45px"
-                  class=""
+                  class="rounded"
                 />
-                <div class="">
-                  <p class="">Flutter</p>
-                  <div class="">
+                <div class="d-flex flex-column">
+                  <p class="fw-bold">Flutter</p>
+                  <div class="progress">
                     <div
-                      class=""
+                      class="progress-bar bg-info"
                       role="progressbar"
                       style="width: 30%"
                       aria-valuenow="50"
@@ -81,23 +91,23 @@
                   </div>
                 </div>
               </div>
-              <span class="">&rarr;</span>
+              <span class="badge rounded-pill bg-info text-dark h-25">&rarr;</span>
             </li>
           </ul>
           <ul class="">
-            <li class="">
-              <div class="">
+            <li class="d-flex flex-row justify-content-between align-items-center">
+              <div class="d-flex justify-content-start gap-3">
                 <img
                   src="https://thumbs.dreamstime.com/b/no-thumbnail-image-placeholder-forums-blogs-websites-148010362.jpg"
                   alt=""
                   style="width: 45px; height: 45px"
-                  class=""
+                  class="rounded"
                 />
-                <div class="">
-                  <p class="">Html</p>
-                  <div class="">
+                <div class="d-flex flex-column">
+                  <p class="fw-bold">Html</p>
+                  <div class="progress">
                     <div
-                      class=""
+                      class="progress-bar bg-danger"
                       role="progressbar"
                       style="width: 80%"
                       aria-valuenow="50"
@@ -107,23 +117,23 @@
                   </div>
                 </div>
               </div>
-              <span class="">&rarr;</span>
+              <span class="badge rounded-pill bg-danger h-25">&rarr;</span>
             </li>
           </ul>
           <ul class="">
-            <li class="">
-              <div class="">
+            <li class="d-flex flex-row justify-content-between align-items-center">
+              <div class="d-flex justify-content-start gap-3">
                 <img
                   src="https://thumbs.dreamstime.com/b/no-thumbnail-image-placeholder-forums-blogs-websites-148010362.jpg"
                   alt=""
                   style="width: 45px; height: 45px"
-                  class=""
+                  class="rounded"
                 />
-                <div class="">
-                  <p class="">CSS</p>
-                  <div class="">
+                <div class="d-flex flex-column">
+                  <p class="fw-bold">CSS</p>
+                  <div class="progress">
                     <div
-                      class=""
+                      class="progress-bar"
                       role="progressbar"
                       style="width: 80%"
                       aria-valuenow="50"
@@ -133,88 +143,88 @@
                   </div>
                 </div>
               </div>
-              <span class="">&rarr;</span>
+              <span class="badge rounded-pill bg-primary h-25">&rarr;</span>
             </li>
           </ul>
         </div>
-        <div class="">
+        <div class="card-body col-6 p-3 gap-3 d-flex justify-content-start flex-column border border-1 rounded">
           <strong>Reach me</strong>
           <form>
-            <div class="">
-              <label for="exampleInputEmail1" class="">Email address</label>
+            <div class="d-flex gap-3 flex-column">
+              <label for="exampleInputEmail1" class="border border-secondary">Email address</label>
               <input
                 type="email"
-                class=""
+                class="border border-secondary"
                 id="exampleInputEmail1"
                 aria-describedby="emailHelp"
               />
-              <div id="emailHelp" class="">
+              <div id="emailHelp" style="font-size: xx-small;" class="fw-lighter fs-6">
                 We'll never share your email with anyone else.
               </div>
             </div>
-            <div class="">
+            <div class="d-flex flex-row gap-3">
               <label for="Subject" class="">Subject</label>
-              <textarea class="" id="Subject" rows="3"></textarea>
+              <textarea class="w-100" id="Subject" rows="3"></textarea>
             </div>
-            <div class="">
+            <div class="d-flex flex-column gap-3">
               <label for="Country" class="">Country</label>
-              <select class="">
+              <select class="border border-secondary">
                 <option selected>Open this select menu</option>
                 <option value="1">Kuwait</option>
                 <option value="2">Other</option>
               </select>
             </div>
-            <div class="">
+            <div class="d-flex flex-row gap-2">
               <input type="checkbox" class="" id="exampleCheck1" />
               <label class="" for="exampleCheck1"
                 >This is a business email</label
               >
             </div>
-            <button type="submit" class="">Submit</button>
+            <button type="submit" class="btn btn-success">Submit</button>
           </form>
         </div>
-        <div class="">
+        <div class="card-body col-6 p-3 d-flex justify-content-start flex-column border border-1 rounded">
           <strong>My Blog</strong>
-          <div class="" style="height: auto; min-height: 450px">
-            <ol class="">
-              <li class="">
-                <div class="">
-                  <div class="">Article 1</div>
+          <div class="border border-1 d-flex flex-column justify-content-between" style="height: auto; min-height: 450px">
+            <ol class="list-group list-group-numbered gap-3 border border-1 d-flex flex-column">
+              <li class="border border-1 gap-2 d-flex justify-content-between align-items-start">
+                <div class="border border-1">
+                  <div class="fw-bold">Article 1</div>
                   Lorem
                 </div>
-                <span class="">10 mins read</span>
+                <span class="badge rounded-pill bg-success ">10 mins read</span>
               </li>
-              <li class="">
+              <li class="d-flex justify-content-between align-items-start">
                 <div class="">
-                  <div class="">Article 2</div>
+                  <div class="fw-bold">Article 2</div>
                   Lorem
                 </div>
-                <span class="">15 mins read</span>
+                <span class="badge rounded-pill bg-success">15 mins read</span>
               </li>
-              <li class="">
+              <li class="d-flex justify-content-between align-items-start">
                 <div class="">
-                  <div class="">Article 3</div>
+                  <div class="fw-bold">Article 3</div>
                   Lorem
                 </div>
-                <span class="">7 mins read</span>
+                <span class="badge rounded-pill bg-success ">7 mins read</span>
               </li>
             </ol>
-            <ul class="">
-              <li class="">
+            <ul class="list-group list-group-horizontal d-flex justify-content-center align-items-center ">
+              <li class="border border-1 p-2 d-flex">
                 <a class="" href="#" tabindex="-1" aria-disabled="true"
                   >Previous</a
                 >
               </li>
-              <li class="">
+              <li class="d-flex border border-1 p-2">
                 <a class="" href="#">1</a>
               </li>
-              <li class="">
+              <li class="d-flex border border-1 p-2">
                 <a class="" href="#">2</a>
               </li>
-              <li class="">
+              <li class="d-flex border border-1 p-2">
                 <a class="" href="#">3</a>
               </li>
-              <li class="">
+              <li class="d-flex border border-1 p-2">
                 <a class="" href="#">Next</a>
               </li>
             </ul>
@@ -222,5 +232,11 @@
         </div>
       </div>
     </div>
+
+    <script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+  crossorigin="anonymous"
+></script>
   </body>
 </html>
